build/kubernetes/apiservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: apiservice
  name: apiservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apiservice
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: apiservice
    spec:
      containers:
        - image: loyaltyacr.azurecr.io/apiservice
          name: apiservice
          ports:
            - containerPort: 9000
            - containerPort: 9100
          resources: {}
      restartPolicy: Always
status: {}
