build/kubernetes/campaign-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: campaign
  name: campaign
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: campaign
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: campaign
    spec:
      containers:
        - image: campaign
          name: campaign
          ports:
            - containerPort: 9007
            - containerPort: 9107
          resources: {}
      restartPolicy: Always
status: {}
