build/kubernetes/company-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: company
  name: company
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: company
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: company
    spec:
      containers:
        - image: loyaltyacr.azurecr.io/company
          name: company
          ports:
            - containerPort: 9001
            - containerPort: 9101
          resources: {}
      restartPolicy: Always
status: {}
