build/kubernetes/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: consumer
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consumer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: consumer
    spec:
      containers:
        - image: loyalty1.azurecr.io/consumer
          name: consumer
          ports:
            - containerPort: 9002
            - containerPort: 9102
          resources: {}
      restartPolicy: Always
status: {}
