build/kubernetes/item-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: item
  name: item
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: item
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: item
    spec:
      containers:
        - image: loyalty1.azurecr.io/item
          name: item
          ports:
            - containerPort: 9004
            - containerPort: 9104
          resources: {}
      restartPolicy: Always
status: {}
