build/kubernetes/merchant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: merchant
  name: merchant
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: merchant
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: merchant
    spec:
      containers:
        - image: loyaltyacr.azurecr.io/merchant
          name: merchant
          ports:
            - containerPort: 9006
            - containerPort: 9106
          resources: {}
      restartPolicy: Always
status: {}
