build/kubernetes/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: product
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: product
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: product
    spec:
      containers:
        - image: loyalty1.azurecr.io/product
          name: product
          ports:
            - containerPort: 9003
            - containerPort: 9103
          resources: {}
      restartPolicy: Always
status: {}
