build/kubernetes/whoami-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: whoami
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: whoami
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: whoami
    spec:
      containers:
        - image: traefik/whoami
          name: whoami
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
