build/kubernetes/apiservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: apiservice
  name: apiservice
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "9100"
      port: 9100
      targetPort: 9100
  selector:
    io.kompose.service: apiservice
  type: NodePort
status:
  loadBalancer: {}
