build/kubernetes/company-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: company
  name: company
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
    - name: "9101"
      port: 9101
      targetPort: 9101
  selector:
    io.kompose.service: company
  type: LoadBalancer
status:
  loadBalancer: {}
