build/kubernetes/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: consumer
  name: consumer
spec:
  ports:
    - name: "9002"
      port: 9002
      targetPort: 9002
    - name: "9102"
      port: 9102
      targetPort: 9102
  selector:
    io.kompose.service: consumer
  type: NodePort
status:
  loadBalancer: {}
