build/kubernetes/item-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: item
  name: item
spec:
  ports:
    - name: "9004"
      port: 9004
      targetPort: 9004
    - name: "9104"
      port: 9104
      targetPort: 9104
  selector:
    io.kompose.service: item
  type: NodePort
status:
  loadBalancer: {}
