build/kubernetes/merchant-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: merchant
  name: merchant
spec:
  ports:
    - name: "9006"
      port: 9006
      targetPort: 9006
    - name: "9106"
      port: 9106
      targetPort: 9106
  selector:
    io.kompose.service: merchant
  type: LoadBalancer
status:
  loadBalancer: {}
