build/kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  ports:
    - name: "37017"
      port: 37017
      targetPort: 27017
  selector:
    io.kompose.service: mongo
  type: LoadBalancer
status:
  loadBalancer: {}
