build/kubernetes/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../loyalty-dev/docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: product
  name: product
spec:
  ports:
    - name: "9003"
      port: 9003
      targetPort: 9003
    - name: "9103"
      port: 9103
      targetPort: 9103
  selector:
    io.kompose.service: product
  type: NodePort
status:
  loadBalancer: {}
